correct nav text overlap

--- a/src/components/navigation/navigation.styles.css
+++ b/src/components/navigation/navigation.styles.css
@@ -9,7 +9,7 @@
     position: fixed;
     z-index: 1;
     width: 100vw;
-    height: 15vh;
+    height: 18vh;
 }
 
 h1 {
